# rr_interaction

./: .gitignore  CMakeLists.txt  README.md  config.demo.toml  config.example.toml  config.toml  index.html  interaction_launcher.py  launch_interaction.py  package.xml  rr_log_config.json  web_ui.py
logs/: log.example
performance/: performance_log00.toml  performance_log01.toml  performance_log02.toml  performance_log03.toml  performance_log04.toml  performance_log05.toml  performance_log06.toml  performance_log07.toml  performance_log08.toml  performance_log09.toml  performance_log10.toml  performance_log11.toml  performance_log12.toml  performance_log13.toml  performance_log14.toml  performance_log15.toml  performance_log16.toml  performance_log17.toml  performance_log18.toml  performance_log19.toml  performance_log20.toml  performance_log21.toml  performance_log22.toml  performance_log23.toml  performance_log24.toml  performance_log25.toml  performance_log26.toml  performance_log27.toml  performance_log28.toml  rr2_participant_config00.toml  rr2_participant_config01.toml  rr2_participant_config02.toml  rr2_participant_config03.toml  rr2_participant_config04.toml  rr2_participant_config05.toml  rr2_participant_config06.toml  rr2_participant_config07.toml  rr2_participant_config08.toml  rr2_participant_config09.toml  rr2_participant_config10.toml  (+22 more)
scripts/: check_for_audio.py  env.sh  ros.conf  rr_dependencies.launch  rr_web_dependencies.launch  run_audio_server.sh  show_log.sh
src/: gen_next_session_config.py  index.html  lookat_and_affect_node.py  lookat_node.py  (+16 more)
(+224 files in other folders)
