<?xml version="1.0"?>
<package>
  <name>rr_interaction</name>
  <version>0.1.0</version>
  <description>Relational robot interaction control node</description>

  <maintainer email="jakory@media.mit.edu">jakory</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/mitmedialab/rr_interaction</url>
  <author email="jakory@media.mit.edu">jakory</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
